Fixed slidebars overlapping header

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ a { text-decoration: none; }
 #header .right-nav a { margin: 0 0 0 15px; color: #FFF; font-size: 15px; text-transform: uppercase; display:inline-block;}
 #header .right-nav a:hover { color: #F35386; } 
 #header .soundcloud { float: right; margin: -20px 20px 0 0; } 
+#header .icon { float:right; margin:-2px 0 0 2px; width: 20px; height: 20px; -webkit-transform: rotate(90deg); -moz-transform: rotate(90deg); -ms-transform: rotate(90deg); -o-transform: rotate(90deg);}
 
 /*************** CONTENT ***************/
 #main { position:relative; float: left; width:100%; height: calc(100% - 130px); background-color:#F4F4F4; overflow:hidden; }
@@ -36,7 +37,10 @@ a { text-decoration: none; }
 #footer { position:fixed; bottom: 0; left: 0; width:100%; height:130px; background-color:#FFF; box-shadow: -1px -1px 2px #CCC; }
 #footer .player-bar { width: 56%; height: 8px; background-color: #F35386;}
 #footer .logo { float:left; width: 200px; display:block;}
-#footer .player { float:right; }
+#footer .player { float:right; width: 500px; }
+#footer .player .song { float:left; margin-left: 10px;}
+#footer .player .artist { float:left; }
+#footer .player .bar { float:left; width: 500px; height: 8px; background-color: #D6D6D6;}
 
 /*************** SLIDE TRANSITION ***************/
 #slide-leftbar { position: fixed; top: 50px; width: 200px; height: calc(100% - 130px); }
